--- a/package.json
+++ b/package.json
@@ -25,26 +25,27 @@
     "url": "https://github.com/alex94puchades/avem-rest-api/issues"
   },
   "dependencies": {
-    "uid2": "0.0.3",
+    "ask-sync": "~0.1.5",
     "async": "~1.3.0",
-    "bunyan": "^1.4.0",
-    "scrypt": "~4.0.7",
-    "lodash": "^3.10.0",
-    "express": "~4.13.1",
-    "mongoose": "~4.0.7",
     "auth-rbac": "~0.5.18",
     "body-parser": "~1.13.2",
+    "bunyan": "^1.4.0",
     "compression": "~1.5.1",
     "cors": "~2.7.1",
+    "express": "~4.13.1",
     "jsonapify": "0.4.10",
+    "lodash": "^3.10.0",
+    "mongoose": "~4.0.7",
     "oauth2orize": "~1.0.1",
     "passport": "~0.2.2",
+    "passport-anonymous": "^1.0.1",
     "passport-http": "~0.2.2",
     "passport-http-bearer": "~1.0.1",
-    "passport-oauth2-public-client": "~0.1.0",
     "passport-oauth2-client-password": "~0.1.2",
+    "passport-oauth2-public-client": "~0.1.0",
     "readline-sync": "~1.2.19",
-    "ask-sync": "~0.1.5"
+    "scrypt": "~4.0.7",
+    "uid2": "0.0.3"
   },
   "devDependencies": {
     "chai": "~3.0.0",
