--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "uid2": "0.0.3"
   },
   "devDependencies": {
+    "babel-core": "^5.8.21",
     "chai": "~3.2.0",
     "gulp": "^3.9.0",
     "gulp-babel": "^5.1.0",
