--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
 # Build directory
-dist
+/dist
 
-# Configuration files
-config.js
-config.js.old
+# KDE hidden directories
+.directory
+
+# Server config files
+/config.js
+/config.js.old
 
 # Backup files
 *~
