Updated dependencies (skip bunyan v1.5.0 use-strict bug)

--- a/package.json
+++ b/package.json
@@ -30,13 +30,13 @@
     "auth-rbac": "~1.0.0",
     "babel-runtime": "^5.8.20",
     "body-parser": "~1.13.3",
-    "bunyan": "^1.4.0",
+    "bunyan": "~1.4.0",
     "compression": "~1.5.2",
     "cors": "~2.7.1",
     "express": "~4.13.3",
-    "jsonapify": "1.5.4",
+    "jsonapify": "1.5.10",
     "lodash": "^3.10.1",
-    "mongoose": "~4.1.4",
+    "mongoose": "~4.1.5",
     "oauth2orize": "~1.0.1",
     "passport": "~0.3.0",
     "passport-anonymous": "^1.0.1",
@@ -54,7 +54,7 @@
     "gulp": "^3.9.0",
     "gulp-babel": "^5.2.1",
     "gulp-sourcemaps": "^1.5.2",
-    "mocha": "~2.3.0",
+    "mocha": "~2.3.1",
     "sinon": "~1.16.1",
     "sinon-chai": "~2.8.0"
   }
